--- a/SVM to predict stock prices.ipynb
+++ b/SVM to predict stock prices.ipynb
@@ -1762,10 +1762,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 11.365893864200512\n",
+      "Mean Squared Error: 229.45543431962997\n",
+      "Root Mean Squared Error: 15.147786449499147\n",
+      "Profits: 17.05431975561568\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "# Load the stock price data\n",
+    "data = pd.read_csv('ADANI.csv')\n",
+    "\n",
+    "# Extract the features and target variable\n",
+    "X = data[['Open', 'High', 'Low', 'Adj Close', 'Volume']]\n",
+    "y = data['Close']\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a Random Forest Regressor model\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the testing set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(\"Mean Absolute Error:\", mae)\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "\n",
+    "# Backtest the trading strategy\n",
+    "buy_threshold = 0.02  # Percentage increase threshold to buy\n",
+    "sell_threshold = -0.01  # Percentage decrease threshold to sell\n",
+    "initial_investment = 10000  # Initial investment amount\n",
+    "shares = 0\n",
+    "cash = initial_investment\n",
+    "positions = []\n",
+    "\n",
+    "for i in range(len(y_test)):\n",
+    "    price_change = (y_test.iloc[i] - y_test.iloc[i-1]) / y_test.iloc[i-1]  # Percentage price change from the previous day\n",
+    "    \n",
+    "    if price_change > buy_threshold:\n",
+    "        shares_to_buy = cash / y_test.iloc[i]\n",
+    "        shares += shares_to_buy\n",
+    "        cash = 0\n",
+    "        positions.append(1)  # Buy signal\n",
+    "    elif price_change < sell_threshold:\n",
+    "        cash_to_sell = shares * y_test.iloc[i]\n",
+    "        cash += cash_to_sell\n",
+    "        shares = 0\n",
+    "        positions.append(-1)  # Sell signal\n",
+    "    else:\n",
+    "        positions.append(0)  # No action\n",
+    "\n",
+    "# Calculate profits based on the positions\n",
+    "returns = y_test.pct_change() * positions\n",
+    "profits = returns.sum()\n",
+    "\n",
+    "print(\"Profits:\", profits)\n",
+    "\n",
+    "# Calculate the cumulative returns\n",
+    "cumulative_returns = (1 + returns).cumprod()\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
